bpk-lib/crates/syncbat/tests/ui/operation_macro_bad_effect.stderr
error: unsupported effect `Network` in #[syncbat::operation]
 --> tests/ui/operation_macro_bad_effect.rs:4:14
  |
4 |     effect = Network,
  |              ^^^^^^^
